// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow on rendering should render default background color 1`] = `
.c0:hover {
  background-color: #FAFBFC;
}

.c0:focus {
  outline: 2px solid #4C9AFF;
  outline-offset: -2px;
}

<tr
  className="c0"
/>
`;

exports[`TableRow on rendering with highlighted prop should render with highlighted background color 1`] = `
.c0 {
  background-color: #F4F5F7;
}

.c0:hover {
  background-color: #EBECF0;
}

.c0:focus {
  outline: 2px solid #4C9AFF;
  outline-offset: -2px;
}

<tr
  className="c0"
/>
`;
